--- a/index.html
+++ b/index.html
@@ -95,13 +95,17 @@
             <nav class="col-md-2">
                 <ul>
                     <li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-                    <li class=""><a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
-                        <span class="badge alert-info">4</span>
+                    <li class="">
+                        <a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule
+                            <span class="badge alert-info">4</span>
+                        </a>
                     </li>
                     <li class=""><a href="charts.html"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
                     <li class=""><a href="tables.html"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
-                    <li class=""><a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
-                        <span class="badge alert-warning">3</span>
+                    <li class="">
+                        <a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms
+                            <span class="badge badge-roundless badge-success">new</span>
+                        </a>
                     </li>
                     <li class=""><a href="userprofile.html"><i class="glyphicon glyphicon-user"></i>Users</a></li>
                 </ul>
